[gd_scene load_steps=8 format=3 uid="uid://bpx2qn0c6vg3f"]

[ext_resource type="Script" uid="uid://drwcixvf3xtfc" path="res://scripts/upgrades/piece_upgrade.gd" id="1_atfqj"]
[ext_resource type="Resource" uid="uid://bt26s1asdl7mi" path="res://resources/upgrades/add_piece_pawn.tres" id="2_cey2v"]
[ext_resource type="Texture2D" uid="uid://c2ldxc3utpvmh" path="res://assets/sprites/WhitePieces.png" id="3_n51mt"]
[ext_resource type="Texture2D" uid="uid://yqsyo5o1b5di" path="res://assets/sprites/upgrades-Sheet.png" id="4_lruwh"]

[sub_resource type="AtlasTexture" id="AtlasTexture_am8vr"]
atlas = ExtResource("3_n51mt")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_atfqj"]
atlas = ExtResource("4_lruwh")
region = Rect2(16, 16, 32, 32)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_n51mt"]
size = Vector2(16, 16)

[node name="PieceUpgrade" type="Area2D"]
script = ExtResource("1_atfqj")
piece_upgrade_data = ExtResource("2_cey2v")

[node name="PiecePreviewSprite" type="Sprite2D" parent="."]
z_index = 1
position = Vector2(-6, 7)
scale = Vector2(2, 2)
texture = SubResource("AtlasTexture_am8vr")

[node name="UpgradeSprite" type="Sprite2D" parent="."]
z_index = 1
position = Vector2(12, -2)
scale = Vector2(2, 2)
texture = SubResource("AtlasTexture_atfqj")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-6, 7)
shape = SubResource("RectangleShape2D_n51mt")
